Fixed logo positioning on mobile

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -171,23 +171,25 @@
       flex-direction: column;
       height: auto;
       align-items: center;
-      padding: 10px 20px;
-      margin-left: 0;
-      margin-right: 0;
+      padding: 10px 0;
+      margin: 0;
+      max-width: 100vw;
     }
   
     .logo {
       margin: 0 0 10px 0;
       max-height: 100px;
-      overflow: hidden;
-      width: 100%;
+      display: flex;
       justify-content: center;
+      max-width: 100%;
+      padding-left: 70px;
     }
   
     .logoImage {
-      height: 150px;
-      object-fit: cover;
+      height: 100px;
+      object-fit: contain;
       object-position: center;
+      max-width: 100%;
     }
   
     .tagline {
